# digipin-python

./: .pre-commit-config.yaml  .render.yaml  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy-api.yml  publish.yml
api/: Dockerfile  app.py  pyproject.toml
api/app/: config.py  dependencies.py  error.py  main.py
api/app/routes/v1/: routes.py
api/app/routes/v1/endpoints/: digipin.py
api/app/schemas/: digipin_schemas.py
api/app/services/: digipin_services.py
example/: main.py
src/digipin/: core.py
tests/: test_core.py  test_model.py
