[project]
name = "digipin-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhomoy Roy Choudhury",email = "subhomoyrchoudhury@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "digipin-python (>=0.1.3,<0.2.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
